tests/snapshots/golden__website__.windsurf__rules__default.md.snap
---
source: tests/golden.rs
expression: content
---
---
description: "website — Agent Policy Rules"
trigger: always_on
---

# website — Agent Policy

Public marketing website and documentation.

## Commands

- Test: `npm test`
- Install: `npm install`
- Lint: `npm run lint`

## Edit permissions

You may freely edit:
- `src/**`
- `public/**`
- `docs/**`
- `content/**`

Do not modify without human review:
- `.github/workflows/**`
- `deployment.json`
- `functions/**`
- `package-lock.json`

## Constraints
- Never commit secrets or credentials.- Escalate protected path changes for human review.
